google and facebook logins

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,9 @@ REFRESH_TOKEN_SECRET="Ukraine (Ukrainian: Україна, romanized: Ukraïna, p
 GITHUB_CLIENT_ID=fd135edfd2c97f8dbccb
 GITHUB_CLIENT_SECRET=270f5d8f9234b9720358df2e563f222b50cdd4b9
 GITHUB_REDIRECT_URL="http://localhost:3000/github-success"
+FACEBOOK_APP_ID=856950301942789
+FACEBOOK_APP_SECRET=9ccb014def0a576417716a1714c2b39f
+FACEBOOK_REDIRECT_URI=http://localhost:7000/api/facebook/callback
+GOOGLE_CLIENT_ID=87856915981-3b2b92er0gd2jkc5mqr78ud5ic5hqvtq.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URL="http://localhost:7000/api/google/callback"
