Twilio: added sendOTP and verifyOTP methods

--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,6 @@ HASURA_SECRET=myadminsecretkey
 GRAPHQL_ENDPOINT=https://hasura-endpoint.rocketgraph.io/v1/graphql
 REFRESH_TOKEN_SECRET="If it is able to parse any of the above successfully, then it will use that parsed time to refresh/refetch the JWKs again. If it is unable to parse, then it will not refresh the JWKs"
 ACCESS_TOKEN_SECRET="If it is able to parse any of the above successfully, then it will use that parsed time to refresh/refetch the JWKs again. If it is unable to parse, then it will not refresh the JWKs"
+TWILIO_ACCOUNT_SID=ACb33cba8229cdeff6941d6890734a1223
+TWILIO_SERVICE_SID=VA67a0ba55c627a36977723e5eae6c19f1
+TWILIO_ACCOUNT_AUTH_TOKEN=c10eb1db765d369bcd7807aeeac50f2a
