--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,5 +1,9 @@
 name: golang-pipeline
-on: push
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
   test:
     runs-on: ubuntu-latest
