--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run Unit Tests
+        env:
+          HASURA_SECRET: ${{ vars.HASURA_SECRET }}
+          GRAPHQL_ENDPOINT: ${{ vars.GRAPHQL_ENDPOINT }}
         run: go test -v ./AuthService
   deploy:
     runs-on: ubuntu-latest
